# wifi3d

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
backend/: geometry.py  main.py  models.py  qr.py  stl_export.py  threemf_export.py
docs/superpowers/plans/: 2026-05-01-wifi3d.md
frontend/: app.js  index.html  styles.css
tests/: test_api.py  test_geometry.py  test_models.py  test_qr.py  test_stl_export.py  test_threemf_export.py
